разбивает css и подключает препроцессор sass

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -261,7 +261,7 @@
                             </ul>
                         </section>
                     </div>
-                    <form class="subscription-form">
+                    <form class="footer__subscription subscription-form">
                         <h2 class="social-links-title">Подпишитесь на рассылку</h2>
                         <div class="subscription-field">
                             <label>
